# mcp-memory-service-rs

./: CHANGELOG.md  COMMERCIAL.md  Cargo.toml  LICENSE  README.md  SPEC.md
.github/workflows/: ci.yml
scripts/: README.md  bench.py  m4_parity.py  parity_check.py
src/: config.rs  embeddings.rs  error.rs  main.rs  server.rs  stats.rs  storage.rs
