[package]
name = "mcp-memory-service"
version = "0.1.0"
edition = "2021"
description = "Schema-compatible Rust drop-in for the core tools of mcp-memory-service"
license = "MIT"
readme = "SPEC.md"

[[bin]]
name = "mcp-memory-service-rs"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.5", features = ["macros", "server", "transport-io"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "io-std", "signal"] }
rusqlite = { version = "0.39", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = { version = "0.7", features = ["derive"] }
# ort rc.12 fails to compile on macOS (src/ep/vitis.rs); rc.10 is the last
# known-good release. Pin exactly so a patch bump doesn't regress us.
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["std", "download-binaries", "ndarray"] }
ndarray = "0.16"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
once_cell = "1"
tar = "0.4"
flate2 = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
